--- a/Task 1/style.css
+++ b/Task 1/style.css
@@ -2,18 +2,24 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    transition: all 0.1s ease; /* Smooth transition for all properties */
+
 }
 
 body {
     background-color: #e9e9e9;
 }
 
-h1, h2 {
+h1,
+h2 {
     font-family: "Protest Guerrilla", sans-serif;
 }
 
-p {
+p, 
+h3 {
     font-family: 'Josefin Sans', serif;
+    font-size: 16px;
+    line-height: 1.5;
 }
 
 h1 {
@@ -26,55 +32,65 @@ h2 {
     margin-bottom: 10px;
 }
 
+
 header {
     background-color: #e9e9e9;
-    display: flex; /* Make the header a flex container */
-    justify-content: center; /* Center the image horizontally */
-    align-items: center; /* Center the image vertically if necessary */
-    padding: 20px; /* Optional padding */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
 }
 
 header img {
-    max-width: 100%; /* Optional: make sure the image is responsive */
-    height: auto; /* Maintain the aspect ratio */
+    max-width: 100%;
+    height: auto;
     width: 200px;
+    margin-top: 20px;
 }
 
 
 .navbar {
-    width: 100vw; /* Full width */
+    width: 100vw;
     display: flex;
-    justify-content: center; /* Center the list horizontally */
-    padding: 10px; /* Optional padding for spacing */
+    justify-content: center;
+    padding: 10px;
 }
 
 .navbar ul {
-    list-style: none; /* Remove default bullets from the list */
+    list-style: none;
     margin: 0;
     padding: 0;
-    display: flex; /* Ensure the list items are in a row */
-    gap: 20px; /* Optional: spacing between list items */
+    display: flex;
+    gap: 20px;
 }
 
 .navbar li {
-    display: inline; /* Makes the list items inline */
+    display: inline;
     margin: 20px 50px;
+    font-family: 'Josefin Sans', serif;
 }
 
 .navbar a {
-    text-decoration: none; /* Remove underline from links */
-    padding: 10px 20px; /* Add padding around links */
-    color: #000; /* Text color */
+    text-decoration: none;
+    padding: 10px 20px;
+    color: #000;
 }
 
 .navbar a:hover {
-    background-color: white; /* Optional hover effect */
+    background-color: white;
 }
+
+/* main {
+    margin: 20px 50px;
+    background-color: white;
+    border: 2px solid black;
+} */
 
 main {
     margin: 0 auto;
-    max-width: 1024px;
+    width: 1024px;
     background-color: white;
+    border: 2px solid black;
 }
 
 .topsection {
@@ -83,49 +99,428 @@ main {
 
 .topsection p {
     font-size: 32px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
-.gridcontainer {
+.columncontent {
+    padding: 50px;
+    column-count: 3;
+    margin-top: -50px;
+}
+
+.gridimages {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); /* Flexible grid columns */
-    gap: 20px; /* Spacing between items */
+    justify-content: center;
+    grid-template-columns: 2fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-template-areas: 
+        "featured featured top-left top-right"
+        "featured featured bottom-left bottom-right";
+    margin-top: 20px;
     padding: 20px;
-    grid-auto-flow: dense; /* Allows content to flow continuously */
 }
 
-.gridcontent {
-    background-color: #f5f5f5;
+.gridimages img {
+    width: 250px;
+    height: 250px;
+}
+
+.gridimages img:nth-child(1) {
+    grid-area: featured;
+    width: 500px;
+    height: 500px;
+}
+
+.gridimages img:nth-child(2) {
+    grid-area: top-right;
+}
+
+.gridimages img:nth-child(3) {
+    grid-area: top-left;
+}
+
+.gridimages img:nth-child(4) {
+    grid-area: bottom-right;
+}
+
+.gridimages img:nth-child(5) {
+    grid-area: bottom-left;
+}
+
+.author {
+    margin-top: 10px;
+    padding: 50px;
+    display: flex;
+    flex-direction: row;
+    border: 1px solid black;
+    justify-content: center;
+    align-items: center; 
+    gap: 50px;
+}
+
+.author h2 {
+    text-align: center; 
+}
+
+.author p {
+    margin-top: 20px;
+    text-align: left; 
+    margin: 0;
+}
+
+.author img {
+    border-radius: 50%;
+    width: 200px;
+}
+
+.footer {
+    background-color: #14181d;
+    color: white;
     padding: 20px;
-    border-radius: 8px;
+    text-align: center;
+    width: 100%;
 }
 
-h2 {
-    margin-bottom: 10px;
-}
-
-p {
-    line-height: 1.5;
-}
-
-
-
-@media screen and (max-width:1024px) 
-{
-
-}
-
-@media screen and (min-width:720px) and (max-width:1024px)
-{
+@media screen and (width <= 1024px) {
+    header img {
+        width: 80px;
+    }
     
+    .navbar {
+        width: 100vw;
+        display: flex;
+        justify-content: center;
+        padding: 10px;
+    }
+    
+    main {
+        margin: 20px auto; 
+        width: 85%; 
+        background-color: white;
+        border: 2px solid black;
+    }
+    
+    .topsection {
+        padding: 30px;
+    }
+    
+    .topsection h1, h2 {
+        text-align: center;
+        margin-top: -10px;
+
+    }
+
+    .topsection p {
+        font-size: 16px;
+        margin-bottom: -20px;
+    }
+    
+    .columncontent {
+        padding: 30px;
+        column-count: auto;
+        margin-bottom: 20px;
+    }
+
+    .columncontent h2 {
+        margin: 30px auto;
+    }
+    
+    .gridimages {
+        display: grid;
+        justify-content: center;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        grid-template-areas: 
+            "top-left  top-right"
+            "bottom-left bottom-right";
+        margin-top: 20px;
+    }
+    
+    .gridimages img {
+        width: 100%;
+        height: 100%;
+    }
+    
+    .gridimages img:nth-child(1) {
+        grid-area: top-left;
+        width: 100%;
+        height: 100%;
+    }
+    
+    .gridimages img:nth-child(2) {
+        grid-area: top-right;
+    }
+    
+    .gridimages img:nth-child(3) {
+        grid-area: bottom-left;
+    }
+    
+    .gridimages img:nth-child(4) {
+        grid-area: bottom-right;
+    }
+    
+    .gridimages img:nth-child(5) {
+        display: none;
+    }
+
+    .author {
+        margin-top: 10px;
+        padding: 30px;
+        gap: 30px;
+    }
+    
+    .author h2 {
+        text-align: left; 
+    }
+    
+    .author p {
+        margin-top: 20px;
+        text-align: left; 
+        margin: 0;
+    }
+    
+    .author img {
+        border-radius: 50%;
+        width: 200px;
+    }
+    
+    .footer {
+        background-color: #14181d;
+        color: white;
+        padding: 20px;
+        text-align: center;
+    }
 }
 
-@media screen and (min-width:520px) and (max-width:720px)
-{
+@media screen and (width < 721px) {
+    header img {
+        width: 80px;
+    }
     
+    .navbar {
+        width: 100vw;
+        padding: 10px;
+    }
+    
+    main {
+        margin: 10px auto; 
+        width: 100%; 
+        background-color: white;
+        border: 2px solid black;
+    }
+    
+    .topsection h1, h2 {
+        text-align: center;
+    }
+
+    .topsection h1 {
+        font-size: 70px;
+    }
+
+    .topsection h2 {
+        font-size: 54px;
+        margin-bottom: 20px;
+    }
+
+    .topsection p {
+        font-size: 16px;
+        margin-bottom: -20px;
+    }
+    
+    .columncontent {
+        padding: 10px;
+        column-count: auto;
+        margin-bottom: 20px;
+    }
+
+    .columncontent h2 {
+        margin: 30px auto;
+    }
+    
+    .gridimages {
+        display: grid;
+        justify-content: center;
+        grid-template-columns: 1fr;
+        grid-template-areas: 
+            "top-left"
+            "top-right"
+            "bottom-left"
+            "bottom-right";
+        margin-top: 20px;
+        padding: 0;
+    }
+    
+    .gridimages img {
+        width: 100%;
+        height: 100%;
+    }
+    
+    .gridimages img:nth-child(1) {
+        grid-area: top-left;
+        width: 100%;
+        height: 100%;
+    }
+    
+    .gridimages img:nth-child(2) {
+        grid-area: top-right;
+    }
+    
+    .gridimages img:nth-child(3) {
+        grid-area: bottom-left;
+    }
+    
+    .gridimages img:nth-child(4) {
+        grid-area: bottom-right;
+    }
+    
+    .gridimages img:nth-child(5) {
+        display: none;
+    }
+
+    .author {
+        display: flex;
+        flex-direction: column-reverse;
+        gap: 20px;
+        text-align: left; 
+        width: 100%;
+    }
+    
+    .author h2 {
+        text-align: center;
+    }
+
+    .author p {
+        margin-top: 20px;
+        text-align: left; 
+    }
+    
+    .author img {
+        border-radius: 50%;
+        width: 200px;
+    }
 }
 
-@media screen and (max-width:360px)
-{
+@media screen and (width < 541px) {
+    .navbar {
+        width: 100vw;
+        display: flex;
+        justify-content: center;
+    }
     
+    .navbar ul {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        gap: 10px;
+    }
+    
+    .navbar li {
+        display: inline;
+        margin: 10px 20px;
+        font-family: 'Josefin Sans', serif;
+    }
+
+    header img {
+        width: 80px;
+    }
+    
+    .navbar {
+        width: 100vw;
+        padding: 10px;
+    }
+    
+    main {
+        margin: 20px auto; 
+        width: 100%; 
+        background-color: white;
+        border: 2px solid black;
+    }
+    
+    .topsection h1, h2 {
+        text-align: center;
+    }
+
+    .topsection h1 {
+        font-size: 70px;
+    }
+
+    .topsection h2 {
+        font-size: 54px;
+        margin-bottom: 20px;
+    }
+
+    .topsection p {
+        font-size: 16px;
+        margin-bottom: -20px;
+    }
+    
+    .columncontent {
+        padding: 20px;
+        column-count: auto;
+        margin-bottom: 20px;
+    }
+
+    .columncontent h2 {
+        margin: 30px auto;
+    }
+    
+    .gridimages {
+        display: grid;
+        justify-content: center;
+        grid-template-columns: 1fr;
+        grid-template-areas: 
+            "top-left"
+            "top-right"
+            "bottom-left"
+            "bottom-right";
+        margin-top: 20px;
+        padding: 0;
+    }
+    
+    .gridimages img {
+        width: 100%;
+        height: 100%;
+    }
+    
+    .gridimages img:nth-child(1) {
+        grid-area: top-left;
+        width: 100%;
+        height: 100%;
+    }
+    
+    .gridimages img:nth-child(2) {
+        grid-area: top-right;
+    }
+    
+    .gridimages img:nth-child(3) {
+        grid-area: bottom-left;
+    }
+    
+    .gridimages img:nth-child(4) {
+        grid-area: bottom-right;
+    }
+    
+    .gridimages img:nth-child(5) {
+        display: none;
+    }
+
+    .author {
+        display: flex;
+        flex-direction: column-reverse;
+        text-align: left; 
+        width: 100%;
+        gap: 0;
+    }
+    
+    .author p {
+        margin-top: 20px;
+        margin: 0 auto;
+        width: 420px;
+    }
+    
+    .author img {
+        border-radius: 50%;
+        width: 200px;
+    }
 }
