--- a/Task 1/style.css
+++ b/Task 1/style.css
@@ -2,12 +2,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    transition: all 0.1s ease; /* Smooth transition for all properties */
+    transition: all 0.1s ease; 
 
 }
 
 body {
     background-color: #e9e9e9;
+    overflow-x: hidden;
 }
 
 h1,
@@ -80,12 +81,6 @@ header img {
     background-color: white;
 }
 
-/* main {
-    margin: 20px 50px;
-    background-color: white;
-    border: 2px solid black;
-} */
-
 main {
     margin: 0 auto;
     width: 1024px;
@@ -110,45 +105,21 @@ main {
 
 .gridimages {
     display: grid;
-    justify-content: center;
-    grid-template-columns: 2fr 1fr 1fr;
+    grid-template-columns: repeat(4, 1fr);
     grid-template-rows: 1fr 1fr;
-    grid-template-areas: 
-        "featured featured top-left top-right"
-        "featured featured bottom-left bottom-right";
-    margin-top: 20px;
-    padding: 20px;
 }
 
 .gridimages img {
-    width: 250px;
-    height: 250px;
+    max-width: 100%;
 }
+
 
 .gridimages img:nth-child(1) {
-    grid-area: featured;
-    width: 500px;
-    height: 500px;
-}
-
-.gridimages img:nth-child(2) {
-    grid-area: top-right;
-}
-
-.gridimages img:nth-child(3) {
-    grid-area: top-left;
-}
-
-.gridimages img:nth-child(4) {
-    grid-area: bottom-right;
-}
-
-.gridimages img:nth-child(5) {
-    grid-area: bottom-left;
+    grid-column: span 2;
+    grid-row: span 2;
 }
 
 .author {
-    margin-top: 10px;
     padding: 50px;
     display: flex;
     flex-direction: row;
@@ -181,7 +152,7 @@ main {
     width: 100%;
 }
 
-@media screen and (width <= 1024px) {
+@media screen and (width < 1024px) {
     header img {
         width: 80px;
     }
@@ -264,7 +235,6 @@ main {
     }
 
     .author {
-        margin-top: 10px;
         padding: 30px;
         gap: 30px;
     }
@@ -347,7 +317,6 @@ main {
             "bottom-left"
             "bottom-right";
         margin-top: 20px;
-        padding: 0;
     }
     
     .gridimages img {
@@ -412,7 +381,6 @@ main {
         margin: 0;
         padding: 0;
         display: flex;
-        gap: 10px;
     }
     
     .navbar li {
