--- a/Task 2/style.css
+++ b/Task 2/style.css
@@ -15,6 +15,7 @@ p {
 .nav {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     border: 2px solid black;
     padding: 0px 16px;
     margin-bottom: 48px;
@@ -33,9 +34,9 @@ p {
 
 .nav ul li {
     list-style: none;
-    margin: auto 48px;
-    font-family: "Teko", sans-serif;
-    font-size: 2em;
+    margin: auto 16px;
+    font-family: "Lato", serif;
+    font-size: 1.5em;
 }
 
 .nav ul li a{
@@ -53,10 +54,10 @@ p {
     border-radius: 16px;
 }
 
+
 .grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(5, 1fr);
     gap: 48px;
     max-width: 900px;
     margin: 0 auto;
@@ -68,33 +69,78 @@ p {
 
 .gridcontent img {
     width: 100%;
-    height: auto;
+    height: 100%;
+    object-fit: cover;
 }
 
 .gridcontent:nth-child(1) {
-    grid-column: span 2 / span 2;
+   grid-column: span 2;
+   height: fit-content;
+   display: flex;
+   flex-direction: column;
 }
 
+.gridcontent:nth-child(1) img {
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+} 
+
 .gridcontent:nth-child(2) {
-    grid-row-start: 2;
+    grid-column: span 1;
+    display: grid;
+    grid-template-rows: auto 1fr;
+
 }
 
 .gridcontent:nth-child(3) {
-    grid-row-start: 2;
+    grid-column: span 1;
+    display: grid;
+    grid-template-rows: auto 1fr;
 }
 
 .gridcontent:nth-child(4) {
-    grid-column: span 2 / span 2;
+    grid-column: span 2;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 }
 
 .gridcontent:nth-child(5) {
     grid-column: span 2 / span 2;
     grid-row-start: 4;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
 }
 
 .gridcontent:nth-child(6) {
     grid-column: span 2 / span 2;
     grid-row-start: 5;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
 }
-        
 
+.gridcontainer {
+    padding: 16px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.gridtext h1{
+    font-size: 3em;
+}
+
+.gridtext p{
+    font-size: 1.5em;
+    margin-bottom: 16px;
+}
+
+.watchnow {
+    font-size: 2em;
+    padding: 16px;
+}
+
+
+@media screen and (max-width < 1024px) {
+
+}
