--- a/Task 2/style.css
+++ b/Task 2/style.css
@@ -2,6 +2,11 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    transition: all 0.1s ease-in-out;
+}
+
+body {
+    background-color: #231651;
 }
 
 h1, button {
@@ -19,12 +24,16 @@ p {
     border: 2px solid black;
     padding: 0px 16px;
     margin-bottom: 48px;
-    box-shadow: 10px 0px 20px;
+    box-shadow: 0px 10px 36px #4DCCBD;
+    background-color: #070410;
 }
 
 .nav h1 {
     font-size: 3em;
     margin: auto 0px;
+    color:#FFFFFF;
+    cursor: pointer;
+    text-shadow: 2px 2px 10px #4DCCBD;
 }
 
 .nav ul {
@@ -41,19 +50,35 @@ p {
 
 .nav ul li a{
     text-decoration: none;
-    color: black;
+    color:#FFFFFF;
+    transition: all 0.3s ease-in-out;
+    text-shadow: 2px 2px 10px #4DCCBD;
+}
+
+.nav ul li a:hover {
+    color: #EEF36A;
 }
 
 .search {
     font-size: 3em;
-    border: 1px solid gray;
-    background-color: white;
+    border: 1px solid #EEF36A;
+    color: #FFF;
+    background-color: #231651;
     cursor: pointer;
     padding: 0 16px;
     margin: 16px 0;
     border-radius: 16px;
+    transition: all 0.2s ease-in-out;
+    box-shadow: 2px 2px 10px #231651;
+
 }
 
+.search:hover {
+    background-color: #4DCCBD;
+    border: 1px solid #EEF36A;
+    box-shadow: 2px 2px 10px #FFFFFF;
+    color: #EEF36A;
+}
 
 .grid {
     display: grid;
@@ -61,86 +86,303 @@ p {
     gap: 48px;
     max-width: 900px;
     margin: 0 auto;
-}
-    
-.gridcontent {
-    border: 2px solid black;
+    margin-bottom: 48px;
 }
 
-.gridcontent img {
+.gridcontainer {
+    border: 2px solid #4DCCBD;
+    box-shadow: 0px 5px 10px #070410;
+    background-color: #070410;
+}
+
+.gridcontainer h1 {
+    font-size: 3em;
+    color: #EEF36A;
+    text-shadow: 2px 2px 10px#EEF36A;
+}
+
+.gridcontainer p {
+    font-size: 1.5em;
+    margin-bottom: 16px;
+    color: #FFF;
+    text-shadow: 2px 2px 5px#ffff;
+}
+
+.gridcontainer img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
-
-.gridcontent:nth-child(1) {
-   grid-column: span 2;
-   height: fit-content;
-   display: flex;
-   flex-direction: column;
-}
-
-.gridcontent:nth-child(1) img {
-    width: 100%;
-    height: 400px;
-    object-fit: cover;
-} 
-
-.gridcontent:nth-child(2) {
-    grid-column: span 1;
-    display: grid;
-    grid-template-rows: auto 1fr;
-
-}
-
-.gridcontent:nth-child(3) {
-    grid-column: span 1;
-    display: grid;
-    grid-template-rows: auto 1fr;
-}
-
-.gridcontent:nth-child(4) {
-    grid-column: span 2;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-}
-
-.gridcontent:nth-child(5) {
-    grid-column: span 2 / span 2;
-    grid-row-start: 4;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-}
-
-.gridcontent:nth-child(6) {
-    grid-column: span 2 / span 2;
-    grid-row-start: 5;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-}
-
-.gridcontainer {
+    
+.gridcontent {
     padding: 16px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 
-.gridtext h1{
-    font-size: 3em;
-}
-
-.gridtext p{
-    font-size: 1.5em;
-    margin-bottom: 16px;
-}
-
 .watchnow {
     font-size: 2em;
     padding: 16px;
+    border-radius: 16px;
+    background-color: #231651;
+    color: #FFF;
+    cursor: pointer;
+}
+
+.watchnow:hover {
+    background-color: #4DCCBD;
+    box-shadow: 0px 10px 20px #4DCCBD;
+    color: #EEF36A;
+}
+
+.gridcontainer:nth-child(1) {
+    grid-column: span 2 / span 2;
+}
+
+.gridcontainer:nth-child(1) img{
+    width: 100%;
+    height: 350px;
+    object-fit: cover;
+}
+
+.gridcontainer:nth-child(1) .gridcontent {
+    display: flex;
+    flex-direction: row;
+}
+
+.gridcontainer:nth-child(1) .gridcontent button {
+    width: 90%;
+    font-size: 3em;
+}
+
+.gridcontainer:nth-child(2) {
+    grid-column: span 1;
+    display: grid;
+    grid-template-rows: auto 1fr;
+}
+
+.gridcontainer:nth-child(3) {
+    grid-column: span 1;
+    display: grid;
+    grid-template-rows: auto 1fr;
+}
+
+.gridcontainer:nth-child(4) {
+    grid-column: span 2 / span 2;
+    grid-row-start: 3;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.gridcontainer:nth-child(5) {
+    grid-column: span 2 / span 2;
+    grid-row-start: 4;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.gridcontainer:nth-child(6) {
+    grid-column: span 2 / span 2;
+    grid-row-start: 5;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+@media screen and (width <= 1024px) {
+    .nav {
+        margin-bottom: 36px;
+    }
+
+    .grid {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 36px;
+        max-width: 900px;
+        margin: 0 auto;
+        margin-bottom: 36px;
+    }
+        
+    .gridcontent {
+        padding: 16px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+    
+    .gridcontainer:nth-child(1) {
+        grid-column: span 1;
+        display: grid;
+        grid-template-rows: auto 1fr;
+    }
+    
+    .gridcontainer:nth-child(1) img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    
+    .gridcontainer:nth-child(1) .gridcontent {
+        display: grid;
+    }
+    
+    .gridcontainer:nth-child(1) .gridcontent button {
+        width: 100%;
+        font-size: 2em;
+    }
+    
+    .gridcontainer:nth-child(2) {
+        grid-column: span 1;
+        display: grid;
+        grid-template-rows: auto 1fr;
+    }
+    
+    .gridcontainer:nth-child(3) {
+        grid-column: span 1;
+        display: grid;
+        grid-template-rows: auto 1fr;
+    }
+    
+    .gridcontainer:nth-child(4) {
+        grid-column: span 1;
+        grid-row-start: 2;
+        display: grid;
+        grid-template-columns: 1fr; 
+        grid-template-rows: auto 1fr;
+    }
+    
+    .gridcontainer:nth-child(5) {
+        grid-column: span 1 ;
+        grid-row-start: 3;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto 1fr;
+    }
+    
+    .gridcontainer:nth-child(6) {
+        grid-column: span 1;
+        grid-row-start: 3;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto 1fr;
+    }
+}
+
+@media screen and (width <= 720px) {
+    .nav {
+        margin-bottom: 16px;
+    }
+    
+    .nav h1 {
+        font-size: 2em;
+    }
+
+    .nav ul li {
+        display: none;
+    }
+    
+    .search {
+        font-size: 2em;
+    }
+    
+    .grid {
+        display: grid;
+        grid-template-columns: repeat (1,1fr);
+        grid-template-rows: repeat (6, 1fr);
+        gap: 16px;
+        max-width: 100%;
+        margin: 0 auto;
+        margin-bottom: 16px;
+    }
+    
+    .gridcontainer {
+        border: 2px solid black;
+        box-shadow: 10px 10px 20px;
+        width: 100vw;
+    }
+    
+    .gridcontainer h1 {
+        font-size: 2em;
+    }
+    
+    .gridcontainer p {
+        font-size: 1.5em;
+        margin-bottom: 16px;
+    }
+    
+    .gridcontainer img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+        
+    .gridcontent {
+        padding: 16px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+    
+    .watchnow {
+        font-size: 2em;
+        padding: 16px;
+        border-radius: 16px;
+    }
+    
+    .gridcontainer:nth-child(1) {
+        grid-column: span 1;
+        display: grid;
+        grid-template-rows: auto 1fr;
+    }
+    
+    .gridcontainer:nth-child(1) img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    
+    .gridcontainer:nth-child(1) .gridcontent {
+        display: grid;
+    }
+    
+    .gridcontainer:nth-child(1) .gridcontent button {
+        width: 100%;
+        font-size: 2em;
+    }
+    
+    .gridcontainer:nth-child(2) {
+        grid-column: span 1;
+        grid-row-start: 2;
+
+        display: grid;
+    }
+    
+    .gridcontainer:nth-child(3) {
+        grid-column: span 1;
+        grid-row-start: 3;
+        display: grid;
+    }
+    
+    .gridcontainer:nth-child(4) {
+        grid-column: span 1;
+        grid-row-start: 4;
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+    
+    .gridcontainer:nth-child(5) {
+        grid-column: span 1;
+        grid-row-start: 5;
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+    
+    .gridcontainer:nth-child(6) {
+        grid-column: span 1;
+        grid-row-start: 6;
+        display: grid;
+        grid-template-columns: 1fr;
+    }
 }
 
 
-@media screen and (max-width < 1024px) {
-
-}
