--- a/Task 2/style.css
+++ b/Task 2/style.css
@@ -7,6 +7,7 @@
 
 body {
     background-color: #231651;
+    overflow: hidden;
 }
 
 h1,
@@ -27,6 +28,7 @@ p {
     margin-bottom: 48px;
     box-shadow: 0px 10px 36px #4DCCBD;
     background-color: #070410;
+    width: 100%;
 }
 
 .nav h1 {
@@ -94,6 +96,7 @@ p {
     max-width: 900px;
     margin: 0 auto;
     margin-bottom: 48px;
+    overflow: none;
 }
 
 .gridcontainer {
@@ -280,6 +283,10 @@ p {
 }
 
 @media screen and (width <= 720px) {
+    .body {
+        overflow:hidden;
+    }
+
     .nav {
         margin-bottom: 16px;
     }
@@ -301,15 +308,14 @@ p {
         grid-template-columns: repeat (1, 1fr);
         grid-template-rows: repeat (6, 1fr);
         gap: 16px;
-        max-width: 100%;
-        margin: 0 auto;
+        width: 100%;
+        margin: 0 0;
         margin-bottom: 16px;
     }
 
     .gridcontainer {
         border: 2px solid black;
         box-shadow: 10px 10px 20px;
-        width: 100vw;
     }
 
     .gridcontainer h1 {
