--- a/Task 2/style.css
+++ b/Task 2/style.css
@@ -7,7 +7,6 @@
 
 body {
     background-color: #231651;
-    overflow: hidden;
 }
 
 h1,
@@ -96,7 +95,7 @@ p {
     max-width: 900px;
     margin: 0 auto;
     margin-bottom: 48px;
-    overflow: none;
+    width: 100%;
 }
 
 .gridcontainer {
@@ -283,9 +282,6 @@ p {
 }
 
 @media screen and (width <= 720px) {
-    .body {
-        overflow:hidden;
-    }
 
     .nav {
         margin-bottom: 16px;
@@ -305,12 +301,12 @@ p {
 
     .grid {
         display: grid;
-        grid-template-columns: repeat (1, 1fr);
-        grid-template-rows: repeat (6, 1fr);
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(6, 1fr);
         gap: 16px;
-        width: 100%;
-        margin: 0 0;
+        margin: auto auto;
         margin-bottom: 16px;
+        width: 100%;
     }
 
     .gridcontainer {
@@ -370,7 +366,6 @@ p {
     .gridcontainer:nth-child(2) {
         grid-column: span 1;
         grid-row-start: 2;
-
         display: grid;
     }
 
