--- a/Task 2/sass.scss
+++ b/Task 2/sass.scss
@@ -1,3 +1,17 @@
+/*# sourceMappingURL=sass.css.map */
+
+$darkblue: #070410;
+$blue: #231651;
+$lightblue: #4DCCBD;
+$yellow: #EEF36A;
+
+@mixin theme($theme: LightBlue) {
+    background-color: $lightblue;
+    border: 1px solid $yellow;
+    box-shadow: 2px 2px 10px #FFFFFF;
+    color: $yellow;
+}
+
 * {
     padding: 0;
     margin: 0;
@@ -6,17 +20,18 @@
 }
 
 body {
-    background-color: #231651;
+    background-color: $blue;
+
+    h1,
+    button {
+        font-family: "Teko", sans-serif;
+    }
+
+    p {
+        font-family: "Lato", serif;
+    }
 }
 
-h1,
-button {
-    font-family: "Teko", sans-serif;
-}
-
-p {
-    font-family: "Lato", serif;
-}
 
 .nav {
     display: flex;
@@ -25,67 +40,65 @@ p {
     border: 2px solid black;
     padding: 0px 16px;
     margin-bottom: 48px;
-    box-shadow: 0px 10px 36px #4DCCBD;
-    background-color: #070410;
+    box-shadow: 0px 10px 36px $lightblue;
+    background-color: $darkblue;
     width: 100%;
+
+    h1 {
+        font-size: 3em;
+        margin: auto 0px;
+        color: #FFFFFF;
+        cursor: pointer;
+        text-shadow: 4px 2px 2px $lightblue;
+        transition: all 0.2s ease-in-out;
+    }
+
+    h1:hover {
+        color: $yellow;
+        text-shadow: 2px 2px 10px $lightblue;
+    }
+
+    ul {
+        display: flex;
+        justify-content: center;
+    }
+
+    ul li {
+        list-style: none;
+        margin: auto 16px;
+        font-family: "Lato", serif;
+        font-size: 1em;
+    }
+
+    ul li a {
+        text-decoration: none;
+        color: #FFFFFF;
+        transition: all 0.3s ease-in-out;
+        text-shadow: 2px 2px 10px $lightblue;
+    }
+
+    ul li a:hover {
+        color: $yellow;
+    }
 }
 
-.nav h1 {
-    font-size: 3em;
-    margin: auto 0px;
-    color: #FFFFFF;
-    cursor: pointer;
-    text-shadow: 4px 2px 2px #4DCCBD;
-    transition: all 0.2s ease-in-out;
-}
-
-.nav h1:hover {
-    color: #EEF36A;
-    text-shadow: 2px 2px 10px #4DCCBD;
-}
-
-.nav ul {
-    display: flex;
-    justify-content: center;
-}
-
-.nav ul li {
-    list-style: none;
-    margin: auto 16px;
-    font-family: "Lato", serif;
-    font-size: 1em;
-}
-
-.nav ul li a {
-    text-decoration: none;
-    color: #FFFFFF;
-    transition: all 0.3s ease-in-out;
-    text-shadow: 2px 2px 10px #4DCCBD;
-}
-
-.nav ul li a:hover {
-    color: #EEF36A;
-}
 
 .search {
     font-size: 3em;
-    border: 1px solid #EEF36A;
+    border: 1px solid $yellow;
     color: #FFF;
-    background-color: #231651;
+    background-color: $blue;
     cursor: pointer;
     padding: 0 16px;
     margin: 16px 0;
     border-radius: 16px;
     transition: all 0.2s ease-in-out;
-    box-shadow: 2px 2px 10px #231651;
+    box-shadow: 2px 2px 10px $blue;
 
 }
 
 .search:hover {
-    background-color: #4DCCBD;
-    border: 1px solid #EEF36A;
-    box-shadow: 2px 2px 10px #FFFFFF;
-    color: #EEF36A;
+    @include theme(LightBlue)
 }
 
 .grid {
@@ -99,29 +112,29 @@ p {
 }
 
 .gridcontainer {
-    border: 2px solid #4DCCBD;
-    box-shadow: 0px 0px 50px #4DCCBD;
-    box-shadow: 10px 10px 10px #4DCCBD;
-    background-color: #070410;
-}
+    border: 2px solid $lightblue;
+    box-shadow: 0px 0px 50px $lightblue;
+    box-shadow: 10px 10px 10px $lightblue;
+    background-color: $darkblue;
 
-.gridcontainer h1 {
-    font-size: 3em;
-    color: #EEF36A;
-    text-shadow: 4px 2px 4px #4DCCBD;
-}
+    h1 {
+        font-size: 3em;
+        color: $yellow;
+        text-shadow: 4px 2px 4px $lightblue;
+    }
 
-.gridcontainer p {
-    font-size: 1.5em;
-    margin-bottom: 16px;
-    color: #FFF;
-    text-shadow: 2px 2px 5px#ffff;
-}
+    p {
+        font-size: 1.5em;
+        margin-bottom: 16px;
+        color: #FFF;
+        text-shadow: 2px 2px 5px#ffff;
+    }
 
-.gridcontainer img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
 }
 
 .gridcontent {
@@ -135,39 +148,38 @@ p {
     font-size: 2em;
     padding: 16px;
     border-radius: 16px;
-    background-color: #231651;
+    background-color: $blue;
     color: #FFF;
     cursor: pointer;
     transition: all 0.1s ease-in-out;
-    border: 2px solid #EEF36A;
+    border: 2px solid $yellow;
 }
 
 .watchnow:hover {
-    background-color: #4DCCBD;
-    box-shadow: 0px 0px 40px #4DCCBD;
-    color: #EEF36A;
-    text-shadow: 0px 0px 20px #EEF36A;
+    @include theme(LightBlue)
 }
 
 .gridcontainer:nth-child(1) {
     grid-column: span 2 / span 2;
+
+    img {
+        width: 100%;
+        height: 350px;
+        object-fit: cover;
+    }
+
+    .gridcontent {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .gridcontent button {
+        width: 90%;
+        font-size: 3em;
+
+    }
 }
 
-.gridcontainer:nth-child(1) img {
-    width: 100%;
-    height: 350px;
-    object-fit: cover;
-}
-
-.gridcontainer:nth-child(1) .gridcontent {
-    display: flex;
-    flex-direction: row;
-}
-
-.gridcontainer:nth-child(1) .gridcontent button {
-    width: 90%;
-    font-size: 3em;
-}
 
 .gridcontainer:nth-child(2) {
     grid-column: span 1;
@@ -202,7 +214,7 @@ p {
     grid-template-columns: repeat(2, 1fr);
 }
 
-@media screen and (width <= 1024px) {
+@media screen and (width <=1024px) {
     .nav {
         margin-bottom: 36px;
     }
@@ -227,21 +239,21 @@ p {
         grid-column: span 1;
         display: grid;
         grid-template-rows: auto 1fr;
-    }
 
-    .gridcontainer:nth-child(1) img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-    }
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
 
-    .gridcontainer:nth-child(1) .gridcontent {
-        display: grid;
-    }
+        .gridcontent {
+            display: grid;
+        }
 
-    .gridcontainer:nth-child(1) .gridcontent button {
-        width: 100%;
-        font-size: 2em;
+        .gridcontent button {
+            width: 100%;
+            font-size: 2em;
+        }
     }
 
     .gridcontainer:nth-child(2) {
@@ -281,7 +293,7 @@ p {
     }
 }
 
-@media screen and (width <= 720px) {
+@media screen and (width <=720px) {
 
     .nav {
         margin-bottom: 16px;
@@ -312,21 +324,21 @@ p {
     .gridcontainer {
         border: 2px solid black;
         box-shadow: 10px 10px 20px;
-    }
 
-    .gridcontainer h1 {
-        font-size: 2em;
-    }
+        h1 {
+            font-size: 2em;
+        }
 
-    .gridcontainer p {
-        font-size: 1.5em;
-        margin-bottom: 16px;
-    }
+        p {
+            font-size: 1.5em;
+            margin-bottom: 16px;
+        }
 
-    .gridcontainer img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
     }
 
     .gridcontent {
@@ -346,21 +358,21 @@ p {
         grid-column: span 1;
         display: grid;
         grid-template-rows: auto 1fr;
-    }
 
-    .gridcontainer:nth-child(1) img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-    }
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
 
-    .gridcontainer:nth-child(1) .gridcontent {
-        display: grid;
-    }
+        .gridcontent {
+            display: grid;
+        }
 
-    .gridcontainer:nth-child(1) .gridcontent button {
-        width: 100%;
-        font-size: 2em;
+        .gridcontent button {
+            width: 100%;
+            font-size: 2em;
+        }
     }
 
     .gridcontainer:nth-child(2) {
