--- a/Task 2/sass.scss
+++ b/Task 2/sass.scss
@@ -7,7 +7,7 @@ $yellow: #EEF36A;
 
 @mixin theme($theme: LightBlue) {
     background-color: $lightblue;
-    border: 1px solid $yellow;
+    border: 2px solid $yellow;
     box-shadow: 2px 2px 10px #FFFFFF;
     color: $yellow;
 }
@@ -94,7 +94,6 @@ body {
     border-radius: 16px;
     transition: all 0.2s ease-in-out;
     box-shadow: 2px 2px 10px $blue;
-
 }
 
 .search:hover {
@@ -156,7 +155,7 @@ body {
 }
 
 .watchnow:hover {
-    @include theme(LightBlue)
+    @include theme(LightBlue);
 }
 
 .gridcontainer:nth-child(1) {
@@ -214,7 +213,7 @@ body {
     grid-template-columns: repeat(2, 1fr);
 }
 
-@media screen and (width <=1024px) {
+@media screen and (width <= 1024px) {
     .nav {
         margin-bottom: 36px;
     }
@@ -293,7 +292,7 @@ body {
     }
 }
 
-@media screen and (width <=720px) {
+@media screen and (width <= 720px) {
 
     .nav {
         margin-bottom: 16px;
