--- a/Task 1/sass.css
+++ b/Task 1/sass.css
@@ -34,6 +34,7 @@ header {
   justify-content: center;
   align-items: center;
   padding: 20px;
+  font-size: 16px;
 }
 header img {
   max-width: 100%;
