--- a/Task 2/sass.css
+++ b/Task 2/sass.css
@@ -155,6 +155,13 @@ body p {
 .gridcontainer:nth-child(1) .gridcontent button {
   width: 90%;
   font-size: 3em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.gridcontainer:nth-child(1) .watch {
+  margin-bottom: -16px;
 }
 
 .gridcontainer:nth-child(2) {
@@ -223,8 +230,12 @@ body p {
     display: grid;
   }
   .gridcontainer:nth-child(1) .gridcontent button {
-    width: 100%;
     font-size: 2em;
+    display: block;
+    width: 100%;
+  }
+  .gridcontainer:nth-child(1) .watch {
+    margin-bottom: 0px;
   }
   .gridcontainer:nth-child(2) {
     grid-column: span 1;
@@ -323,8 +334,12 @@ body p {
     display: grid;
   }
   .gridcontainer:nth-child(1) .gridcontent button {
-    width: 100%;
     font-size: 2em;
+    display: block;
+    width: 100%;
+  }
+  .gridcontainer:nth-child(1) .watch {
+    margin-bottom: 0px;
   }
   .gridcontainer:nth-child(2) {
     grid-column: span 1;
