--- a/Task 1/sass.scss
+++ b/Task 1/sass.scss
@@ -1,20 +1,23 @@
+/* Reset margins, paddings, and box-sizing for all elements */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     transition: all 0.1s ease;
-
 }
 
+/* Styling for the body */
 body {
     background-color: #e9e9e9;
     overflow-x: hidden;
 
+    /* Font styles for h1 and h2 elements */
     h1,
     h2 {
         font-family: "Protest Guerrilla", sans-serif;
     }
 
+    /* Font styles for p and h3 elements */
     p,
     h3 {
         font-family: 'Josefin Sans', serif;
@@ -22,18 +25,20 @@ body {
         line-height: 1.5;
     }
 
+    /* Specific style for h1 elements */
     h1 {
         font-size: 96px;
         margin-bottom: 10px;
     }
 
+    /* Specific style for h2 elements */
     h2 {
         font-size: 70px;
         margin-bottom: 10px;
     }
 }
 
-
+/* Styling for the header */
 header {
     background-color: #e9e9e9;
     display: flex;
@@ -41,6 +46,7 @@ header {
     align-items: center;
     padding: 20px;
 
+    /* Style for the img element within the header */
     img {
         max-width: 100%;
         height: auto;
@@ -49,13 +55,14 @@ header {
     }
 }
 
-
+/* Styling for the navigation bar */
 .navbar {
     width: 100vw;
     display: flex;
     justify-content: center;
     padding: 10px;
 
+    /* Styling for the unordered list within the navigation bar */
     ul {
         list-style: none;
         margin: 0;
@@ -64,61 +71,72 @@ header {
         gap: 20px;
     }
 
+    /* Styling for the list items within the unordered list */
     li {
         display: inline;
         margin: 20px 50px;
         font-family: 'Josefin Sans', serif;
     }
 
+    /* Styling for the anchor tags within the list items */
     a {
         text-decoration: none;
         padding: 10px 20px;
         color: #000;
-    }
 
-    a:hover {
-        background-color: white;
-        padding: 16px;
+        /* Hover state for the anchor tags */
+        &:hover {
+            background-color: white;
+            padding: 16px;
+        }
     }
 }
 
+/* Styling for the main content area */
 main {
     margin: 0 auto;
     width: 1024px;
     background-color: white;
     border: 2px solid black;
-}
 
-.topsection {
-    padding: 50px;
+    /* Styling for the top section within the main content area */
+    .topsection {
+        padding: 50px;
 
-    p {
-        font-size: 32px;
-        margin-bottom: 20px;
+        /* Styling for the paragraph elements within the top section */
+        p {
+            font-size: 32px;
+            margin-bottom: 20px;
+        }
+    }
+
+    /* Styling for the column content within the main content area */
+    .columncontent {
+        padding: 50px;
+        column-count: 3;
+        margin-top: -50px;
+    }
+
+    /* Styling for the grid images within the main content area */
+    .gridimages {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: 1fr 1fr;
+
+        /* Styling for the img elements within the grid images */
+        img {
+            max-width: 100%;
+
+            /* Specific style for the first img element within the grid images */
+            &:nth-child(1) {
+                grid-column: span 2;
+                grid-row: span 2;
+            }
+        }
     }
 }
 
-.columncontent {
-    padding: 50px;
-    column-count: 3;
-    margin-top: -50px;
-}
-
-.gridimages {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: 1fr 1fr;
-
-    img {
-        max-width: 100%;
-    }
-}
-
-.gridimages img:nth-child(1) {
-    grid-column: span 2;
-    grid-row: span 2;
-}
-
+/* Styling for the author section */
 .author {
     padding: 50px;
     display: flex;
@@ -128,22 +146,26 @@ main {
     align-items: center;
     gap: 50px;
 
+    /* Styling for the h2 elements within the author section */
     h2 {
         text-align: center;
     }
 
+    /* Styling for the paragraph elements within the author section */
     p {
         margin-top: 20px;
         text-align: left;
         margin: 0;
     }
 
+    /* Styling for the img elements within the author section */
     img {
         border-radius: 50%;
         width: 200px;
     }
 }
 
+/* Styling for the footer */
 .footer {
     background-color: #14181d;
     color: white;
@@ -152,11 +174,15 @@ main {
     margin-top: auto;
 }
 
+/* Media query for screen widths of 1024px and below */
 @media screen and (width <=1024px) {
+
+    /* Adjustments for the header image */
     header img {
         width: 80px;
     }
 
+    /* Adjustments for the navigation bar */
     .navbar {
         width: 100vw;
         display: flex;
@@ -164,223 +190,240 @@ main {
         padding: 10px;
     }
 
+    /* Adjustments for the main content area */
     main {
         margin: 20px auto;
         width: 85%;
         background-color: white;
         border: 2px solid black;
-    }
 
-    .topsection {
-        padding: 30px;
+        /* Adjustments for the top section within the main content area */
+        .topsection {
+            padding: 30px;
 
-        h1,
-        h2 {
-            text-align: center;
-            margin-top: -10px;
+            h1,
+            h2 {
+                text-align: center;
+                margin-top: -10px;
+            }
+
+            p {
+                font-size: 16px;
+                margin-bottom: -20px;
+            }
         }
 
-        p {
-            font-size: 16px;
-            margin-bottom: -20px;
-        }
-    }
+        /* Adjustments for the column content within the main content area */
+        .columncontent {
+            padding: 30px;
+            column-count: auto;
+            margin-bottom: 20px;
 
-    .columncontent {
-        padding: 30px;
-        column-count: auto;
-        margin-bottom: 20px;
-
-        h2 {
-            margin: 30px auto;
-            text-align: center;
-        }
-    }
-
-    .gridimages {
-        display: grid;
-        justify-content: center;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
-        grid-template-areas:
-            "top-left  top-right"
-            "bottom-left bottom-right";
-        margin-top: 20px;
-
-        img {
-            width: 100%;
-            height: 100%;
-        }
-    }
-
-    .gridimages img:nth-child(1) {
-        grid-area: top-left;
-    }
-
-    .gridimages img:nth-child(2) {
-        grid-area: top-right;
-    }
-
-    .gridimages img:nth-child(3) {
-        grid-area: bottom-left;
-    }
-
-    .gridimages img:nth-child(4) {
-        grid-area: bottom-right;
-    }
-
-    .gridimages img:nth-child(5) {
-        display: none;
-    }
-
-    .author {
-        padding: 30px;
-        gap: 30px;
-
-        h2 {
-            text-align: left;
+            h2 {
+                margin: 30px auto;
+                text-align: center;
+            }
         }
 
-        p {
+        /* Adjustments for the grid images within the main content area */
+        .gridimages {
+            display: grid;
+            justify-content: center;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: 1fr 1fr;
+            grid-template-areas:
+                "top-left top-right"
+                "bottom-left bottom-right";
             margin-top: 20px;
-            text-align: left;
-            margin: 0;
+
+            /* Adjustments for the img elements within the grid images */
+            img {
+                width: 100%;
+                height: 100%;
+            }
+
+            /* Specific adjustments for the first img element within the grid images */
+            img:nth-child(1) {
+                grid-area: top-left;
+            }
+
+            /* Specific adjustments for the second img element within the grid images */
+            img:nth-child(2) {
+                grid-area: top-right;
+            }
+
+            /* Specific adjustments for the third img element within the grid images */
+            img:nth-child(3) {
+                grid-area: bottom-left;
+            }
+
+            /* Specific adjustments for the fourth img element within the grid images */
+            img:nth-child(4) {
+                grid-area: bottom-right;
+            }
+
+            /* Hide the fifth img element within the grid images */
+            img:nth-child(5) {
+                display: none;
+            }
         }
 
-        img {
-            border-radius: 50%;
-            width: 200px;
-        }
-    }
+        /* Adjustments for the author section */
+        .author {
+            padding: 30px;
+            gap: 30px;
 
-    .footer {
-        background-color: #14181d;
-        color: white;
-        padding: 20px;
-        text-align: center;
+            h2 {
+                text-align: left;
+            }
+
+            p {
+                margin-top: 20px;
+                text-align: left;
+            }
+
+            img {
+                width: 200px;
+            }
+        }
     }
 }
 
+/* Media query for screen widths of 720px and below */
 @media screen and (width <=720px) {
 
-
+    /* Adjustments for the header image */
     header img {
         width: 80px;
     }
 
+    /* Adjustments for the navigation bar */
     .navbar {
         width: 100vw;
         padding: 10px;
     }
 
+    /* Adjustments for the main content area */
     main {
-        margin: 10px auto;
+        margin: 20px auto;
         width: 100%;
         background-color: white;
         border: 2px solid black;
-    }
 
-    .topsection {
+        /* Adjustments for the top section within the main content area */
+        .topsection {
+        padding: 20px 20px;
+            h1,
+            h2 {
+                text-align: center;
+            }
 
-        h1,
-        h2 {
-            text-align: center;
+            h1 {
+                font-size: 70px;
+            }
+
+            h2 {
+                font-size: 54px;
+                margin-bottom: 20px;
+            }
+
+            p {
+                font-size: 16px;
+                margin-bottom: -20px;
+            }
         }
 
-        h1 {
-            font-size: 70px;
-        }
-
-        h2 {
-            font-size: 54px;
+        /* Adjustments for the column content within the main content area */
+        .columncontent {
+            padding: 20px;
+            column-count: auto;
             margin-bottom: 20px;
+
+            h2 {
+                margin: 20px auto;
+            }
         }
 
-        p {
-            font-size: 16px;
-            margin-bottom: -20px;
-        }
-    }
-
-    .columncontent {
-        padding: 10px;
-        column-count: auto;
-        margin-bottom: 20px;
-
-        h2 {
-            margin: 30px auto;
-        }
-    }
-
-    .gridimages {
-        display: grid;
-        justify-content: center;
-        grid-template-columns: 1fr;
-        grid-template-areas:
-            "top-left"
-            "top-right"
-            "bottom-left"
-            "bottom-right";
-        margin-top: 20px;
-
-        img {
-            width: 100%;
-            height: 100%;
-        }
-    }
-
-    .gridimages img:nth-child(1) {
-        grid-area: top-left;
-        width: 100%;
-        height: 100%;
-    }
-
-    .gridimages img:nth-child(2) {
-        grid-area: top-right;
-    }
-
-    .gridimages img:nth-child(3) {
-        grid-area: bottom-left;
-    }
-
-    .gridimages img:nth-child(4) {
-        grid-area: bottom-right;
-    }
-
-    .gridimages img:nth-child(5) {
-        display: none;
-    }
-
-    .author {
-        display: flex;
-        flex-direction: column-reverse;
-        gap: 20px;
-        text-align: left;
-        width: 100%;
-
-        h2 {
-            text-align: center;
-        }
-
-        p {
+        /* Adjustments for the grid images within the main content area */
+        .gridimages {
+            display: grid;
+            justify-content: center;
+            grid-template-columns: 1fr;
+            grid-template-areas:
+                "top-left"
+                "top-right"
+                "bottom-left"
+                "bottom-right";
             margin-top: 20px;
-            text-align: left;
+
+            /* Adjustments for the img elements within the grid images */
+            img {
+                width: 100%;
+                height: 100%;
+            }
+
+            /* Specific adjustments for the first img element within the grid images */
+            img:nth-child(1) {
+                grid-area: top-left;
+            }
+
+            /* Specific adjustments for the second img element within the grid images */
+            img:nth-child(2) {
+                grid-area: top-right;
+            }
+
+            /* Specific adjustments for the third img element within the grid images */
+            img:nth-child(3) {
+                grid-area: bottom-left;
+            }
+
+            /* Specific adjustments for the fourth img element within the grid images */
+            img:nth-child(4) {
+                grid-area: bottom-right;
+            }
+
+            /* Hide the fifth img element within the grid images */
+            img:nth-child(5) {
+                display: none;
+            }
         }
 
-        img {
-            border-radius: 50%;
-            width: 200px;
+        /* Adjustments for the author section */
+        .author {
+            display: flex;
+            flex-direction: column-reverse;
+            gap: 20px;
+            text-align: left;
+            width: 100%;
+
+            /* Adjustments for the h2 elements within the author section */
+            h2 {
+                text-align: center;
+            }
+
+            /* Adjustments for the paragraph elements within the author section */
+            p {
+                margin-top: 20px;
+                text-align: left;
+            }
+
+            /* Adjustments for the img elements within the author section */
+            img {
+                width: 200px;
+            }
         }
     }
-
 }
 
+/* Media query for screen widths of 540px and below */
 @media screen and (width <=540px) {
+
+    /* Adjustments for the navigation bar */
     .navbar {
         width: 100vw;
-        display: flex;
         justify-content: center;
 
+        /* Adjustments for the unordered list within the navigation bar */
         ul {
             list-style: none;
             margin: 0;
@@ -388,6 +431,7 @@ main {
             display: flex;
         }
 
+        /* Adjustments for the list items within the unordered list */
         li {
             display: inline;
             margin: 10px 20px;
@@ -395,110 +439,115 @@ main {
         }
     }
 
+    /* Adjustments for the header image */
     header img {
         width: 80px;
     }
 
-    .navbar {
-        width: 100vw;
-        padding: 10px;
-    }
-
+    /* Adjustments for the main content area */
     main {
         margin: 20px auto;
         width: 100%;
         background-color: white;
         border: 2px solid black;
-    }
 
-    .topsection {
+        /* Adjustments for the top section within the main content area */
+        .topsection {
 
-        h1,
-        h2 {
-            text-align: center;
+            h1,
+            h2 {
+                text-align: center;
+            }
+
+            h1 {
+                font-size: 70px;
+            }
+
+            h2 {
+                font-size: 54px;
+                margin-bottom: 20px;
+            }
+
+            p {
+                font-size: 16px;
+                margin-bottom: -20px;
+            }
         }
 
-        h1 {
-            font-size: 70px;
-        }
-
-        h2 {
-            font-size: 54px;
+        /* Adjustments for the column content within the main content area */
+        .columncontent {
+            padding: 20px;
+            column-count: auto;
             margin-bottom: 20px;
+
+            h2 {
+                margin: 20px auto;
+            }
         }
 
-        p {
-            font-size: 16px;
-            margin-bottom: -20px;
-        }
-    }
-
-    .columncontent {
-        padding: 20px;
-        column-count: auto;
-        margin-bottom: 20px;
-
-        h2 {
-            margin: 20px auto;
-        }
-    }
-
-    .gridimages {
-        display: grid;
-        justify-content: center;
-        grid-template-columns: 1fr;
-        grid-template-areas:
-            "top-left"
-            "top-right"
-            "bottom-left"
-            "bottom-right";
-        margin-top: 20px;
-        padding: 0;
-
-        img {
-            width: 100%;
-            height: 100%;
-        }
-    }
-
-    .gridimages img:nth-child(1) {
-        grid-area: top-left;
-        width: 100%;
-        height: 100%;
-    }
-
-    .gridimages img:nth-child(2) {
-        grid-area: top-right;
-    }
-
-    .gridimages img:nth-child(3) {
-        grid-area: bottom-left;
-    }
-
-    .gridimages img:nth-child(4) {
-        grid-area: bottom-right;
-    }
-
-    .gridimages img:nth-child(5) {
-        display: none;
-    }
-
-    .author {
-        display: flex;
-        flex-direction: column-reverse;
-        text-align: left;
-        width: 100%;
-        gap: 0;
-
-        p {
+        /* Adjustments for the grid images within the main content area */
+        .gridimages {
+            display: grid;
+            justify-content: center;
+            grid-template-columns: 1fr;
+            grid-template-areas:
+                "top-left"
+                "top-right"
+                "bottom-left"
+                "bottom-right";
             margin-top: 20px;
-            margin: 0 auto;
-            width: 420px;
+            padding: 0;
+
+            /* Adjustments for the img elements within the grid images */
+            img {
+                width: 100%;
+                height: 100%;
+            }
+
+            /* Specific adjustments for the first img element within the grid images */
+            img:nth-child(1) {
+                grid-area: top-left;
+            }
+
+            /* Specific adjustments for the second img element within the grid images */
+            img:nth-child(2) {
+                grid-area: top-right;
+            }
+
+            /* Specific adjustments for the third img element within the grid images */
+            img:nth-child(3) {
+                grid-area: bottom-left;
+            }
+
+            /* Specific adjustments for the fourth img element within the grid images */
+            img:nth-child(4) {
+                grid-area: bottom-right;
+            }
+
+            /* Hide the fifth img element within the grid images */
+            img:nth-child(5) {
+                display: none;
+            }
         }
 
-        img {
-            border-radius: 50%;
-            width: 200px;
+        /* Adjustments for the author section */
+        .author {
+            display: flex;
+            flex-direction: column-reverse;
+            text-align: left;
+            width: 100%;
+            gap: 0;
+
+            /* Adjustments for the paragraph elements within the author section */
+            p {
+                margin: 0 auto;
+                width: 420px;
+            }
+
+            /* Adjustments for the img elements within the author section */
+            img {
+                width: 200px;
+            }
         }
     }
 }
