--- a/Task 2/sass.scss
+++ b/Task 2/sass.scss
@@ -1,10 +1,12 @@
 /*# sourceMappingURL=sass.css.map */
 
+/* Color variables */
 $darkblue: #070410;
 $blue: #231651;
 $lightblue: #4DCCBD;
 $yellow: #EEF36A;
 
+/* Mixin for theme styling, used on hover */
 @mixin theme($theme: LightBlue) {
     background-color: $lightblue;
     border: 2px solid $yellow;
@@ -12,6 +14,7 @@ $yellow: #EEF36A;
     color: $yellow;
 }
 
+/* Basic global styling */
 * {
     padding: 0;
     margin: 0;
@@ -22,17 +25,19 @@ $yellow: #EEF36A;
 body {
     background-color: $blue;
 
+    /* Apply font styles to h1 and button elements */
     h1,
     button {
         font-family: "Teko", sans-serif;
     }
 
+    /* Apply font styles to paragraph elements */
     p {
         font-family: "Lato", serif;
     }
 }
 
-
+/* Navigation bar styling */
 .nav {
     display: flex;
     justify-content: space-between;
@@ -44,6 +49,7 @@ body {
     background-color: $darkblue;
     width: 100%;
 
+    /* Style for the h1 element within the navigation bar */
     h1 {
         font-size: 3em;
         margin: auto 0px;
@@ -53,16 +59,19 @@ body {
         transition: all 0.2s ease-in-out;
     }
 
+    /* Hover state for the h1 element within the navigation bar */
     h1:hover {
         color: $yellow;
         text-shadow: 2px 2px 10px $lightblue;
     }
 
+    /* Style for the unordered list within the navigation bar */
     ul {
         display: flex;
         justify-content: center;
     }
 
+    /* Style for the list items within the unordered list */
     ul li {
         list-style: none;
         margin: auto 16px;
@@ -70,6 +79,7 @@ body {
         font-size: 1em;
     }
 
+    /* Style for the anchor tags within the list items */
     ul li a {
         text-decoration: none;
         color: #FFFFFF;
@@ -77,12 +87,13 @@ body {
         text-shadow: 2px 2px 10px $lightblue;
     }
 
+    /* Hover state for the anchor tags within the list items */
     ul li a:hover {
         color: $yellow;
     }
 }
 
-
+/* Styling for the search button */
 .search {
     font-size: 3em;
     border: 2px solid $yellow;
@@ -96,10 +107,12 @@ body {
     box-shadow: 2px 2px 10px $blue;
 }
 
+/* Hover state for the search button */
 .search:hover {
     @include theme(LightBlue)
 }
 
+/* Grid container styling */
 .grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -110,25 +123,29 @@ body {
     width: 100%;
 }
 
-.gridcontainer {
+/* Movie container styling */
+.moviecontainer {
     border: 2px solid $lightblue;
     box-shadow: 0px 0px 50px $lightblue;
     box-shadow: 10px 10px 10px $lightblue;
     background-color: $darkblue;
 
+    /* Style for the h1 element within the movie container */
     h1 {
         font-size: 3em;
         color: $yellow;
         text-shadow: 4px 2px 4px $lightblue;
     }
 
+    /* Style for the paragraph element within the movie container */
     p {
         font-size: 1.5em;
         margin-bottom: 16px;
         color: #FFF;
-        text-shadow: 2px 2px 5px#ffff;
+        text-shadow: 2px 2px 5px #ffff;
     }
 
+    /* Style for the img element within the movie container */
     img {
         width: 100%;
         height: 100%;
@@ -136,13 +153,15 @@ body {
     }
 }
 
-.gridcontent {
+/* Container content styling */
+.containercontent {
     padding: 16px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 
+/* Styling for the watch now button */
 .watchnow {
     font-size: 2em;
     padding: 16px;
@@ -154,25 +173,30 @@ body {
     border: 2px solid $yellow;
 }
 
+/* Hover state for the watch now button */
 .watchnow:hover {
     @include theme(LightBlue);
 }
 
-.gridcontainer:nth-child(1) {
+/* Specific styles for the first movie container */
+.moviecontainer:nth-child(1) {
     grid-column: span 2 / span 2;
 
+    /* Style for the img element within the first movie container */
     img {
         width: 100%;
         height: 350px;
         object-fit: cover;
     }
 
-    .gridcontent {
+    /* Container content styling for the first movie container */
+    .containercontent {
         display: flex;
         flex-direction: row;
     }
 
-    .gridcontent button {
+    /* Button styling for the first movie container */
+    .containercontent button {
         width: 90%;
         font-size: 3em;
         display: flex;
@@ -180,52 +204,59 @@ body {
         justify-content: center;
         flex-direction: column;
     }
-    
+
+    /* Additional styling for the watch button within the first movie container */
     .watch {
         margin-bottom: -16px;
     }
-    
 }
 
-
-.gridcontainer:nth-child(2) {
+/* Specific styles for the second movie container */
+.moviecontainer:nth-child(2) {
     grid-column: span 1;
     display: grid;
     grid-template-rows: auto 1fr;
 }
 
-.gridcontainer:nth-child(3) {
+/* Specific styles for the third movie container */
+.moviecontainer:nth-child(3) {
     grid-column: span 1;
     display: grid;
     grid-template-rows: auto 1fr;
 }
 
-.gridcontainer:nth-child(4) {
+/* Specific styles for the fourth movie container */
+.moviecontainer:nth-child(4) {
     grid-column: span 2 / span 2;
     grid-row-start: 3;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
 }
 
-.gridcontainer:nth-child(5) {
+/* Specific styles for the fifth movie container */
+.moviecontainer:nth-child(5) {
     grid-column: span 2 / span 2;
     grid-row-start: 4;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
 }
 
-.gridcontainer:nth-child(6) {
+/* Specific styles for the sixth movie container */
+.moviecontainer:nth-child(6) {
     grid-column: span 2 / span 2;
     grid-row-start: 5;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
 }
 
+/* Media query for screen widths 1024px and below */
 @media screen and (width <= 1024px) {
+    /* Adjustments for the navigation bar */
     .nav {
         margin-bottom: 36px;
     }
 
+    /* Adjustments for the grid container */
     .grid {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
@@ -235,53 +266,61 @@ body {
         margin-bottom: 36px;
     }
 
-    .gridcontent {
+    /* Adjustments for the container content */
+    .containercontent {
         padding: 16px;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
     }
 
-    .gridcontainer:nth-child(1) {
+    /* Adjustments for the first movie container */
+    .moviecontainer:nth-child(1) {
         grid-column: span 1;
         display: grid;
         grid-template-rows: auto 1fr;
 
+        /* Adjustments for the img element within the first movie container */
         img {
             width: 100%;
             height: 100%;
             object-fit: cover;
         }
 
-        .gridcontent {
+        /* Adjustments for the container content within the first movie container */
+        .containercontent {
             display: grid;
         }
 
-        .gridcontent button {
+        /* Adjustments for the button within the first movie container */
+        .containercontent button {
             font-size: 2em;
             display: block;
             width: 100%;
         }
 
+        /* Adjustments for the watch button within the first movie container */
         .watch {
             margin-bottom: 0px;
         }
-        
     }
 
-    .gridcontainer:nth-child(2) {
+    /* Adjustments for the second movie container */
+    .moviecontainer:nth-child(2) {
         grid-column: span 1;
         display: grid;
         grid-template-rows: auto 1fr;
     }
 
-    .gridcontainer:nth-child(3) {
+    /* Adjustments for the third movie container */
+    .moviecontainer:nth-child(3) {
         grid-column: span 1;
         display: grid;
         grid-template-rows: auto 1fr;
     }
 
-    .gridcontainer:nth-child(4) {
+    /* Adjustments for the fourth movie container */
+    .moviecontainer:nth-child(4) {
         grid-column: span 1;
         grid-row-start: 2;
         display: grid;
@@ -289,140 +328,163 @@ body {
         grid-template-rows: auto 1fr;
     }
 
-    .gridcontainer:nth-child(5) {
+    .moviecontainer:nth-child(5) {
         grid-column: span 1;
         grid-row-start: 3;
         display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: auto 1fr;
     }
-
-    .gridcontainer:nth-child(6) {
+    
+    /* Adjustments for the sixth movie container */
+    .moviecontainer:nth-child(6) {
         grid-column: span 1;
         grid-row-start: 3;
         display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: auto 1fr;
     }
-}
-
-@media screen and (width <= 720px) {
-
-    .nav {
-        margin-bottom: 16px;
-    }
-
-    .nav h1 {
-        font-size: 2em;
-    }
-
-    .nav ul li {
-        display: none;
-    }
-
-    .search {
-        font-size: 2em;
-    }
-
-    .grid {
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat(6, 1fr);
-        gap: 16px;
-        margin: auto auto;
-        margin-bottom: 16px;
-        width: 100%;
-    }
-
-    .gridcontainer {
-        border: 2px solid black;
-        box-shadow: 10px 10px 20px;
-
-        h1 {
-            font-size: 2em;
-        }
-
-        p {
-            font-size: 1.5em;
+    
+    /* Media query for screen widths 720px and below */
+    @media screen and (width <= 720px) {
+    
+        /* Adjustments for the navigation bar */
+        .nav {
             margin-bottom: 16px;
         }
-
-        img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
+    
+        /* Adjustments for the h1 element within the navigation bar */
+        .nav h1 {
+            font-size: 2em;
         }
-    }
-
-    .gridcontent {
-        padding: 16px;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-    }
-
-    .watchnow {
-        font-size: 2em;
-        padding: 16px;
-        border-radius: 16px;
-    }
-
-    .gridcontainer:nth-child(1) {
-        grid-column: span 1;
-        display: grid;
-        grid-template-rows: auto 1fr;
-
-        img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
+    
+        /* Hide the list items within the navigation bar */
+        .nav ul li {
+            display: none;
         }
-
-        .gridcontent {
+    
+        /* Adjustments for the search button */
+        .search {
+            font-size: 2em;
+        }
+    
+        /* Adjustments for the grid container */
+        .grid {
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-template-rows: repeat(6, 1fr);
+            gap: 16px;
+            margin: auto auto;
+            margin-bottom: 16px;
+            width: 100%;
+        }
+    
+        /* Adjustments for the movie container */
+        .moviecontainer {
+            border: 2px solid black;
+            box-shadow: 10px 10px 20px;
+    
+            /* Adjustments for the h1 element within the movie container */
+            h1 {
+                font-size: 2em;
+            }
+    
+            /* Adjustments for the paragraph element within the movie container */
+            p {
+                font-size: 1.5em;
+                margin-bottom: 16px;
+            }
+    
+            /* Adjustments for the img element within the movie container */
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+        }
+    
+        /* Adjustments for the container content */
+        .containercontent {
+            padding: 16px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+        }
+    
+        /* Adjustments for the watch now button */
+        .watchnow {
+            font-size: 2em;
+            padding: 16px;
+            border-radius: 16px;
+        }
+    
+        /* Adjustments for the first movie container */
+        .moviecontainer:nth-child(1) {
+            grid-column: span 1;
+            display: grid;
+            grid-template-rows: auto 1fr;
+    
+            /* Adjustments for the img element within the first movie container */
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+    
+            /* Adjustments for the container content within the first movie container */
+            .containercontent {
+                display: grid;
+            }
+    
+            /* Adjustments for the button within the first movie container */
+            .containercontent button {
+                font-size: 2em;
+                display: block;
+                width: 100%;
+            }
+    
+            /* Adjustments for the watch button within the first movie container */
+            .watch {
+                margin-bottom: 0px;
+            }
+        }
+    
+        /* Adjustments for the second movie container */
+        .moviecontainer:nth-child(2) {
+            grid-column: span 1;
+            grid-row-start: 2;
             display: grid;
         }
-
-        .gridcontent button {
-            font-size: 2em;
-            display: block;
-            width: 100%;
+    
+        /* Adjustments for the third movie container */
+        .moviecontainer:nth-child(3) {
+            grid-column: span 1;
+            grid-row-start: 3;
+            display: grid;
         }
-
-        .watch {
-            margin-bottom: 0px;
+    
+        /* Adjustments for the fourth movie container */
+        .moviecontainer:nth-child(4) {
+            grid-column: span 1;
+            grid-row-start: 4;
+            display: grid;
+            grid-template-columns: 1fr;
         }
-    }
-
-    .gridcontainer:nth-child(2) {
-        grid-column: span 1;
-        grid-row-start: 2;
-        display: grid;
-    }
-
-    .gridcontainer:nth-child(3) {
-        grid-column: span 1;
-        grid-row-start: 3;
-        display: grid;
-    }
-
-    .gridcontainer:nth-child(4) {
-        grid-column: span 1;
-        grid-row-start: 4;
-        display: grid;
-        grid-template-columns: 1fr;
-    }
-
-    .gridcontainer:nth-child(5) {
-        grid-column: span 1;
-        grid-row-start: 5;
-        display: grid;
-        grid-template-columns: 1fr;
-    }
-
-    .gridcontainer:nth-child(6) {
-        grid-column: span 1;
-        grid-row-start: 6;
-        display: grid;
-        grid-template-columns: 1fr;
+    
+        /* Adjustments for the fifth movie container */
+        .moviecontainer:nth-child(5) {
+            grid-column: span 1;
+            grid-row-start: 5;
+            display: grid;
+            grid-template-columns: 1fr;
+        }
+    
+        /* Adjustments for the sixth movie container */
+        .moviecontainer:nth-child(6) {
+            grid-column: span 1;
+            grid-row-start: 6;
+            display: grid;
+            grid-template-columns: 1fr;
+        }
     }
 }
