--- a/Task 1/sass.css
+++ b/Task 1/sass.css
@@ -87,7 +87,7 @@ header img {
 main {
   margin: 0 auto;
   width: 1024px;
-  background-color: white;
+  background-color: #FFFFFF;
   border: 2px solid black;
   /* Styling for the top section within the main content area */
   /* Styling for the column content within the main content area */
